// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoCard renders grid type 1`] = `
<li
  className=""
  onClick={[Function]}
>
  <img
    alt="GloRilla, Cardi B - Tomorrow 2 (Official Music Video)"
    className="w-full"
    src="https://i.ytimg.com/vi/zwa7NzNBQig/mqdefault.jpg"
  />
  <div>
    <p
      className="font-semibold my-2 line-clamp-2"
    >
      GloRilla, Cardi B - Tomorrow 2 (Official Music Video)
    </p>
    <p
      className="text-sm opacity-80"
    >
      GloRillaVEVO
    </p>
    <p
      className="text-sm opacity-80"
    >
      1 year ago
    </p>
  </div>
</li>
`;

exports[`VideoCard renders list type 1`] = `
<li
  className="flex gap-1 m-2"
  onClick={[Function]}
>
  <img
    alt="GloRilla, Cardi B - Tomorrow 2 (Official Music Video)"
    className="w-60 mr-2"
    src="https://i.ytimg.com/vi/zwa7NzNBQig/mqdefault.jpg"
  />
  <div>
    <p
      className="font-semibold my-2 line-clamp-2"
    >
      GloRilla, Cardi B - Tomorrow 2 (Official Music Video)
    </p>
    <p
      className="text-sm opacity-80"
    >
      GloRillaVEVO
    </p>
    <p
      className="text-sm opacity-80"
    >
      1 year ago
    </p>
  </div>
</li>
`;
